--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
 BareNecessities==0.2.8
 bcrypt==3.2.2
+blinker==1.4
 cffi==1.15.0
 click==8.1.3
+cryptography==37.0.2
+dnspython==2.2.1
 dominate==2.6.0
+email-validator==1.2.1
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.1
+Flask-Mail==0.9.1
 Flask-Script==2.0.6
 Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jwt==1.3.1
 Mail==2.1.0
 markdown2==2.4.3
 MarkupSafe==2.1.1
